[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Fonts/Sen-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Options/Options.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.701961, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.701961, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 243.0
margin_top = 82.0
margin_right = 780.0
margin_bottom = 517.0
custom_constants/separation = 20

[node name="Fullscreen" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 537.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0.0941176, 0.0941176, 1 )
toggle_mode = true
text = "Fullscreen: Off"
__meta__ = {
"_editor_description_": ""
}

[node name="Music" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 537.0
margin_bottom = 120.0
rect_min_size = Vector2( 300, 50 )
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0.0941176, 0.0941176, 1 )
toggle_mode = true
pressed = true
text = "Music: On"
__meta__ = {
"_editor_description_": ""
}

[node name="Credits" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 537.0
margin_bottom = 435.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Credits"]
margin_right = 537.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 9 )
text = "A Game By The Iddmeister

Submitted to Ludum Dare 46
Made in 72 hours with the Godot Game Engine
Sound Effects generated using sfxr
and Art made with Piskel and Inkscape"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/Credits"]
margin_top = 199.0
margin_right = 537.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 9 )
text = "Music
Brainmelt by Underbelly
Barge by Gunnar Olsen"
align = 1
valign = 1

[node name="Back" type="Button" parent="."]
margin_left = 11.4
margin_top = 12.35
margin_right = 195.4
margin_bottom = 62.35
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="toggled" from="CenterContainer/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/Music" to="." method="_on_Music_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
